2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c: Remove leftover noinline attributes.
	(is_name_start_char, is_name_char): Avoid possible reads
	beyond the end of g_ascii_table.

	* glib/Makefile.am: Use the perl found by configure.  (#149826,
	Morten Welinder)

Sun Nov 28 13:13:56 2004  Manish Singh  <yosh@gimp.org>

	* glib/abicheck.sh: filter G_GNUC before PRIVATE so $ is still true.

	* tests/utf8-validate.c: cast pointer math to gint for error print
	message.

Sun Nov 28 12:07:29 2004  Manish Singh  <yosh@gimp.org>

	* tests/utf8-validate.c: minor comment fix.

2004-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.h:
	* glib/gkeyfile.h:
	* glib/gmem.h: 
	* glib/gstrfuncs.h:
	* glib/gunicode.h:
	* glib/gutils.h: Mark functions with G_GNUC_MALLOC when appropriate.

	* glib/glib.symbols: Add G_GNUC_MALLOC annotations.

	* glib/gmacros.h (G_GNUC_MALLOC): Add a macro for 
	__attribute__((__malloc__)).  (#61780)

2004-11-28  Tor Lillqvist  <tml@iki.fi>

	* glib/gutils.[hc]
	* glib/glib.symbols: [Win32] Make also g_get_user_name() and
	g_get_real() name return UTF-8. As for the similar changes to fix
	#101792, for DLL ABI stability we use preprocessor defines to get
	the new UTF-8 versions, and keep the old names for versions
	returning strings in the system codepage.

	Fix g_get_tmp_dir() and g_get_home_dir() to actually return UTF-8
	as was intended in the fix for bug #101792. (#159664, noticed by
	Robert Ögren)

2004-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c: Optimizations; don't scan the entire text
	in find_current_text_end(), split unescape_text() into multiple
	functions.  (#159001, Havoc Pennington)

2004-11-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/gspawn.c (g_spawn_async_with_pipes): Update the @flags
	documentation with references to GChildWatch and 
	g_spawn_close_pid().  (#136255, noted by Owen Taylor)

2004-11-26  Matthias Clasen  <mclasen@redhat.com>
